--- a/index.html
+++ b/index.html
@@ -259,7 +259,18 @@
             </div>
         </section>
 
+        <section class="py-5 text-center bg-black text-white">
+            <div class="container">
+                <div class="overflow-hidden">
+                    <h4 class="font-weight-normal text-white mb-1" data-zanim-xs='{"duration":1.5,"delay":0}'>The magsmen’s <br class="d-block d-sm-none" /> SDCT MIX</h4>
+                </div>
+                <div class="overflow-hidden">
+                    <img src="assets/img/Approach.png" alt="" srcset="">
+                </div>
 
+            </div>
+            <!-- end of .container-->
+        </section>
 
 
         <!-- SERVICES -->
