--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
                 <div class="row align-items-center justify-content-center" style="padding-bottom: 125px;">
                     <div class="col-md-8 text-center">
                         <img src="./images/logo/MASGMEN-white_caption.png" width="50%" height="30%" alt="">
-                        <h1>We <span class="txt-rotate" data-period="3000" data-rotate='[ "Are Scenic","MAKE SOMETHING GREAT."]'></span></h1>
+                        <h1>We <span class="txt-rotate" data-period="3000" data-rotate='[ "Are magsmen","MAKE SOMETHING GREAT."]'></span></h1>
                         <div class="mx-auto w-75">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto quibusdam possimus quasi porro! Itaque?</p>
+
                         </div>
                         <p class="mt-5"><a href="#contact" class="btn btn-outline-white btn-md ">Get in touch</a></p><br>
                     </div>
