--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-5 mb-lg-0">
-                    <a data-fancybox data-ratio="2" href="https://vimeo.com/317571768" class="block__96788">
+                    <a data-fancybox data-ratio="2" href="./videos/magsmenmp4.mp4" class="block__96788">
                         <span class="play-icon"><span class="icon-play"></span></span>
                         <img src="images/sq_img_6.jpg" alt="Image" class="img-fluid img-shadow">
                     </a>
