--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                             <li>
                                 <a data-scroll="testimonial" href="#how" class="dot">
-                                    <span>how we did</span>
+                                    <span>how we do</span>
                                 </a>
                             </li>
                             <li>
@@ -489,7 +489,7 @@
             <div class="row">
                 <div class="col mb-4 text-center" data1-zanim-timeline="{}" data1-zanim-trigger="scroll">
                     <div class="overflow-hidden">
-                        <h2 class="fs-md-5" data1-zanim-xs='{"duration":"1.5","delay":0}'>how we did it</h2>
+                        <h2 class="fs-md-5" data1-zanim-xs='{"duration":"1.5","delay":0}'>how we do it</h2>
                     </div>
                     <div class="overflow-hidden">
                         <p class="fs--1 text-uppercase  ls-0 mb-0" data1-zanim-xs='{"duration":"1.5","delay":0.1}'>We believe the best brands tell stories, which is why we partner with our clients to create impactful work that not only represents their business, but also connects them with people emotionally. Through strategy, design, content,
