index updated again

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                             <li>
                                 <a data-scroll="testimonial" href="#how" class="dot">
-                                    <span>how we did</span>
+                                    <span>how we do</span>
                                 </a>
                             </li>
                             <li>
@@ -103,7 +103,7 @@
                 <div class="row align-items-center justify-content-center" style="padding-bottom: 125px;">
                     <div class="col-md-8 text-center">
                         <img src="./images/logo/MASGMEN-white_caption.png" width="50%" height="30%" alt="">
-                        <h1>We <span class="txt-rotate" data-period="3000" data-rotate='[ "Are magsmen","MAKE SOMETHING FABULOUS."]'></span></h1>
+                        <h1> <span class="txt-rotate" data-period="3000" data-rotate='[ "BUILDING BRAND stories","WE MAKE SOMETHING FABULOUS."]'></span></h1>
                         <div class="mx-auto w-75">
 
                         </div>
@@ -299,7 +299,7 @@
                                     <div class="px-4" data1-zanim-xs='{"duration":"1.5","delay":"0.2"}'><img class="service-icon" src="assets/img/line-icons/icons/pear.svg" alt="" /></div>
                                 </div>
                                 <div class="overflow-hidden">
-                                    <h5 class="font-weight-normal ls-2 mb-2" data1-zanim-xs='{"duration":"1.5","delay":"0.30000000000000004"}'>brand identity</h5>
+                                    <h5 class="font-weight-normal ls-2 mb-2" data1-zanim-xs='{"duration":"1.5","delay":"0.30000000000000004"}'>Brand identity</h5>
                                 </div>
                                 <div class="overflow-hidden">
                                     <p class="font-weight-normal" data1-zanim-xs='{"duration":"1.5","delay":"0.4"}'>Your brand is your every effort to communicate who you are and what you do. You can see it, feel it and experience it. We'll dig deep to understand your business, audience and landscape to accurately represent the essence
@@ -317,7 +317,7 @@
                                     <div class="px-4" data1-zanim-xs='{"duration":"1.5","delay":"0.4"}'><img class="service-icon" src="assets/img/line-icons/icons/pie-chart.svg" alt="" /></div>
                                 </div>
                                 <div class="overflow-hidden">
-                                    <h5 class="font-weight-normal ls-2 mb-2" data1-zanim-xs='{"duration":"1.5","delay":"0.5"}'>making strategy</h5>
+                                    <h5 class="font-weight-normal ls-2 mb-2" data1-zanim-xs='{"duration":"1.5","delay":"0.5"}'>Marketing</h5>
                                 </div>
                                 <div class="overflow-hidden">
                                     <p class="font-weight-normal" data1-zanim-xs='{"duration":"1.5","delay":"0.6000000000000001"}'>A good marketing strategy allows you to find the right people, communicate the right messages, and send them to the right places. Together we can turn views into engagement and traffic into conversions. Attract attention
@@ -489,7 +489,7 @@
             <div class="row">
                 <div class="col mb-4 text-center" data1-zanim-timeline="{}" data1-zanim-trigger="scroll">
                     <div class="overflow-hidden">
-                        <h2 class="fs-md-5" data1-zanim-xs='{"duration":"1.5","delay":0}'>how we did it</h2>
+                        <h2 class="fs-md-5" data1-zanim-xs='{"duration":"1.5","delay":0}'>how we do it</h2>
                     </div>
                     <div class="overflow-hidden">
                         <p class="fs--1 text-uppercase  ls-0 mb-0" data1-zanim-xs='{"duration":"1.5","delay":0.1}'>We believe the best brands tell stories, which is why we partner with our clients to create impactful work that not only represents their business, but also connects them with people emotionally. Through strategy, design, content,
@@ -564,7 +564,7 @@
                 </div>
                 <div class="col-lg-5 ml-auto">
                     <h3 class="section-title-sub ">Watch the video</h3>
-                    <h2 class="section-title mb-3">The Magsmen Approachs</h2>
+                    <h2 class="section-title mb-3">Lets Build Your Stories</h2>
                    
                                 <p class="ls-0 mb-0 text-left">
                                     MARKETING
@@ -641,7 +641,7 @@
             <div class="row">
                 <div class="col text-center mb-4" data1-zanim-timeline="{}" data1-zanim-trigger="scroll">
                     <div class="overflow-hidden">
-                        <h2 class="fs-md-5" data1-zanim-xs='{"duration":1.5,"delay":0}'>Contact form</h2>
+                        <h2 class="fs-md-5" data1-zanim-xs='{"duration":1.5,"delay":0}'>Lets Build Your Brand Today</h2>
                     </div>
                     <div class="overflow-hidden">
                         <p class="fs--1 text-uppercase text-white ls-0 mb-0" data1-zanim-xs='{"duration":1.5,"delay":0.1}'>We exist to ignite passionate brands, and would love to help your brand make a lasting impact. Your Business is your second love, let’s make it more sweeter and smoother. So, Ready to get started? Oh ho! Got more doubts, fill in the contact form and we’ ll be in touch with you shortly</p>
@@ -662,7 +662,9 @@
                                 <div class="col-1"><span class="fas fa-location-arrow text-700"></span></div>
                                 <div class="col px-2">
                                     <!-- <p class="mb-1 text-700"><strong>MAGSMEN</strong></p> -->
-                                    <p class="mb-0 text-600">8-215-5,Ananthavarapadu rod, etukuru, <br />guntur,522017,</p>
+                                    <p class="mb-0 text-600">5-37-163
+                                        4/13 Brodipet,S & S Chambers opp Singapore plaxa
+                                     <br />Gntur, 522002,</p>
                                 </div>
                             </div>
                         </div>
