--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                                     <div class="px-4" data1-zanim-xs='{"duration":"1.5","delay":"0"}'><img class="service-icon" src="assets/img/line-icons/icons/fountain-pen.svg" alt="" /></div>
                                 </div>
                                 <div class="overflow-hidden">
-                                    <h5 class="font-weight-normal ls-2 mb-2" data1-zanim-xs='{"duration":"1.5","delay":"0.1"}'>Web Develpoment</h5>
+                                    <h5 class="font-weight-normal ls-2 mb-2" data1-zanim-xs='{"duration":"1.5","delay":"0.1"}'>Web Development</h5>
                                 </div>
                                 <div class="overflow-hidden ">
                                     <p class="font-weight-normal" data1-zanim-xs='{"duration":"1.5","delay":"0.2"}'>Your website is the home base for all your digital marketing and communications. We'll craft a web presence that works great on desktop and mobile devices. Our sites are easy to manage and integrate seamlessly with
@@ -557,9 +557,9 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-5 mb-lg-0">
-                    <a data-fancybox data-ratio="2" href="./videos/magsmenmp4.mp4" class="block__96788">
+                    <a data-fancybox data-ratio="2" href="./videos/magsmenmp4 .mp4" class="block__96788">
                         <span class="play-icon"><span class="icon-play"></span></span>
-                        <img src="images/sq_img_6.jpg" alt="Image" class="img-fluid img-shadow">
+                        <img src="images/videoimg.jpg" alt="Image" class="img-fluid img-shadow">
                     </a>
                 </div>
                 <div class="col-lg-5 ml-auto">
@@ -687,11 +687,11 @@
                 </div>
                 <div class="col-lg-6">
                     <h5 class="mb-3">Feel free to drop us a line!</h5>
-                    <form class="zform text-left" method="post"><input type="hidden" name="to" value="username@domain.extension" />
-                        <div class="form-group mb-3"><input class="fs-0 form-control" type="text" placeholder="Your Name" required="required" /></div>
-                        <div class="form-group mb-3"><input class="fs-0 form-control" type="email" placeholder="Email Address" required="required" /></div>
-                        <div class="form-group mb-3"><textarea class="fs-0 form-control contact-message" rows="8" placeholder="Type your message here" required="required"></textarea></div>
-                        <div class="form-feedback my-2"></div><input class="btn btn-block btn-light hvr-sweep-top" type="submit" value="Give us a shot">
+                    <form class="zform text-left" method="post" action="mail.php"><input type="hidden" name="to" value="raghaevndra5240@gmail.com" />
+                        <div class="form-group mb-3"><input class="fs-0 form-control" type="text" placeholder="Your Name" name="user_name" required="required" /></div>
+                        <div class="form-group mb-3"><input class="fs-0 form-control" type="email" placeholder="Email Address" name="from" required="required" /></div>
+                        <div class="form-group mb-3"><textarea class="fs-0 form-control contact-message" rows="8" placeholder="Type your message here" name="message" required="required"></textarea></div>
+                        <div class="form-feedback my-2"></div><input class="btn btn-block btn-light hvr-sweep-top" type="submit" name="submit" value="Give us a shot">
                     </form>
                 </div>
             </div>
