--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
 
     <link rel="stylesheet" href="whatsapp/floating-wpp.css">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175455663-1">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-175455663-1');
+</script>
+
+
 	
 </head>
 
