--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
                                 <div class="col px-2">
                                     <!-- <p class="mb-1 text-700"><strong>MAGSMEN</strong></p> -->
                                     <p class="mb-0 text-600">5-37-163
-                                        4/13 Brodipet,S & S Chambers opp Singapore plaxa
+                                        4/13 Brodipet,S & S Chambers opp Singapore plaza
                                      <br />Gntur, 522002,</p>
                                 </div>
                             </div>
