--- a/index.html
+++ b/index.html
@@ -186,6 +186,10 @@
             .carousel-width{
                 max-width: 350px;
             }
+
+            .site-main-logo {
+                width: 250px;
+            }
         }
         @media only screen 
 and (min-device-width : 768px) 
