--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@ and (orientation : landscape) {
                             <li>Brad Naming</li>
                             <li>Brand Expansion</li>
                             <li>Franchise Model</li>
-                            <li>Pricin Design</li>
+                            <li>Pricing Design</li>
                             <li>Rebranding</li>
                             <li>Logo Design</li>
                             <li>Website Development</li>
@@ -502,7 +502,7 @@ and (orientation : landscape) {
                             <li>Posters Design</li>
                             <li>Brochures & Flyers</li>
                             <li>Offline Marketing</li>
-                            <li>Web Optimisation</li>
+                            <li>Web Optimization</li>
                             <li>Marketing Strategy</li>
                         </ul>
                       </div>
@@ -540,7 +540,7 @@ and (orientation : landscape) {
                         </div>
                         <p class="brand-title">Content</p>
                         <p class="brand-desc">
-                            Content often palys a very important role for any brand, the worldd is changing so as the customers. With each passing day, the importance of smart content is placing a huge role in customer engagement. The quality of the content will percieve the brand. It has to be enfgaging, informative and helpful not boastful, promotional or keyword ridden.
+                            Content often palys a very important role for any brand, the world is changing so as the customers. With each passing day, the importance of smart content is placing a huge role in customer engagement. The quality of the content will percieve the brand. It has to be engaging, informative and helpful not boastful, promotional or keyword ridden.
                         </p>
                       </div>
                       <div class="flip-box-back">
@@ -595,16 +595,16 @@ and (orientation : landscape) {
             <div class="col-full">
                 <h3 class="subhead">Our 5D's Approach</h3>
                 <h1 class="display-1">
-                    Do you want to know how we do
+                    Coz every story building has a process
                 </h1>
             </div>
         </div> <!-- end section-header -->
 
     </section> <!-- end s-about -->
 
-    <section class="s-video target-section">
+    <section class="s-video target-section darker">
 
-        <div class="row services block-1-1 block-tab-full">
+        <div class="row services block-1-1 block-tab-full black-bg">
 
             <div data-aos="fade-up">
                 <div class="bg-holder-2">
@@ -718,9 +718,9 @@ and (orientation : landscape) {
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/i9.png" class="thumb-link" title="I9 Builders"
+                            <a href="images/portfolio/gallery/i9_builders.png" class="thumb-link" title="I9 Builders"
                                 data-size="1050x700">
-                                <img src="images/portfolio/i9.png" alt="">
+                                <img src="images/portfolio/i9_builders.png" alt="">
                             </a>
                         </div>
 
@@ -768,24 +768,25 @@ and (orientation : landscape) {
                         <h2 class="section-title mb-3" style="margin-top: 10px;">Lets Build Your Stories</h2>
 
                         <p class="ls-0 mb-0 text-left">
-                            Marketing
+                            <b class="ini-letter">M</b>arketing
                         </p>
                         <p class="ls-0 mb-0 text-left">
-                            Audit &amp; Advertising
+                            <b class="ini-letter">A</b>udit &amp; Advertising
                         </p>
                         <p class="ls-0 mb-0 text-left">
-                            Growth
+                            <b class="ini-letter">G</b>rowth
                         </p>
                         <p class="ls-0 mb-0 text-left">
-                            Strategy
+                            <b class="ini-letter">S</b>trategy
                         </p>
                         <p class="ls-0 mb-0 text-left">
-                            Multi Channel Design
+                            <b class="ini-letter">M</b>ulti Channel Design
                         </p>
                         <p class="ls-0 mb-0 text-left">
-                            Engagement
+                            <b class="ini-letter">E</b>ngagement
                         </p>
-                        <p class="ls-0 mb-0 text-left">Notable Acheivements
+                        <p class="ls-0 mb-0 text-left">
+                            <b class="ini-letter">N</b>otable Acheivements
                         </p>
 
                     </div>
@@ -889,7 +890,7 @@ and (orientation : landscape) {
         <div class="row section-header narrow" >
             <div class="col-full">
                 <h3 class="subhead">Keep In Touch</h3>
-                <h2 class="display-2">Feel free to contact us for any <br> project idea or collaboration</h2>
+                <h2 class="display-2">Feel free to contact us for any <br> Project idea or collaboration</h2>
             </div>
         </div> <!-- end section-header -->
 
@@ -899,9 +900,9 @@ and (orientation : landscape) {
                     <a href="mailto:gmail.com">growth@magsmen.in</a>
                 </p>
                 <p class="contact-address">
-                    5-37-163 4/13 Brodipet, <br>
-                    S & S Chambers, Opp Singapore plaza <br>
-                    Guntur, 522002. <br>
+                    8-215-5, Ananthavarapadu Road <br>
+                    Etukuru, Guntur <br>
+                    Andhra Pradesh, 522017. <br>
                 </p>
                 <p class="contact-numbers">
                     +91 9044910449
@@ -1006,5 +1007,6 @@ and (orientation : landscape) {
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
     <script src="./whatsapp/floating-wpp.js"></script>
+  
 
 </body>
