--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@ and (orientation : landscape) {
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                        <a href="https://www.facebook.com/Bakery-Delights-1151407844936309" class="item-folio__project-link" title="Bakery Delights Facebook">
                             <i class="icon-link"></i>
                         </a>
 
@@ -715,7 +715,7 @@ and (orientation : landscape) {
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                        <a href="https://www.facebook.com/thehashbox" class="item-folio__project-link" title="The #Box Facebook">
                             <i class="icon-link"></i>
                         </a>
 
@@ -767,7 +767,32 @@ and (orientation : landscape) {
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                        <a href="" class="item-folio__project-link" title="">
+                            <i class="icon-link"></i>
+                        </a>
+
+                    </div>
+                </div> 
+                <div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+
+                        <div class="item-folio__thumb">
+                            <a href="images/portfolio/gallery/gowri senkar.png" class="thumb-link" title="Gowri Sankar"
+                                data-size="1050x700">
+                                <img src="images/portfolio/gallery/gowri senkar.png" alt="">
+                            </a>
+                        </div>
+
+                        <div class="item-folio__text">
+                            <h3 class="item-folio__title">
+                                Gowri Sankar
+                            </h3>
+                            <p class="item-folio__cat">
+                                Branding
+                            </p>
+                        </div>
+
+                        <a href="http://facebook.com/GOWRISANKAR-AGENCIES-101358544912073" class="item-folio__project-link" title="Gowri Sankar Facebook">
                             <i class="icon-link"></i>
                         </a>
 
