Fixes in Business Cards

--- a/bcards/sandeep.html
+++ b/bcards/sandeep.html
@@ -12,6 +12,7 @@
 
 <link rel="stylesheet" href="./css/scrollbar.css">
 
+
 <script type="text/javascript" data-cfasync="false">
 	var em_version         = '6.2.2';
 	var em_track_user      = true;
@@ -116,6 +117,9 @@ var date = {"months":["January","February","March","April","May","June","July","
 							.bgWhite {
 								background-color: #ffffff !important;
 							}
+							.txtWhite{
+								color: #ffffff;
+							}
 							.theme-color-e8676b .timeline-box-inner {
 								border-color: #ffffff;
 							}
@@ -160,11 +164,13 @@ var date = {"months":["January","February","March","April","May","June","July","
 <div class="head-items">
 
 </div>
-<nav class="nav"><ul class="clearfix"><li id="menu-item-468" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="https://rscard.px-lab.com/startuper/#about">About</a></li>
-<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="https://rscard.px-lab.com/startuper/#portfolio">Portfolio</a></li>
-<li id="menu-item-474" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home current-menu-ancestor current-menu-parent menu-item-has-children"><a href="https://rscard.px-lab.com/startuper/#experience">clients</a></li>
-</li>
-</ul></nav></div>
+<nav class="nav">
+	<ul class="clearfix">
+	<li id="menu-item-468" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#about">About</a></li>
+	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#portfolio">Portfolio</a></li>
+	<li id="menu-item-474" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home current-menu-ancestor current-menu-parent menu-item-has-children"><a href="#experience">clients</a></li>
+	<li id="menu-item-472" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#contact">Contact</a></li>
+	</ul></nav></div>
 </div>
 <div class="sidebar sidebar-fixed">
 <button class="btn-sidebar btn-sidebar-close"><i class="rsicon rsicon-close"></i></button>
@@ -182,21 +188,27 @@ var date = {"months":["January","February","March","April","May","June","July","
 <header class="header">
 <div class="head-bg" style="background-image: url('../images/hero-bg.jpg') !important"></div>
 <div class="head-bar has-woo has-sidebar head-sticky-classic">
-<div class="head-bar-inner">
-<div class="row">
-<div class="col-lg-10 col-md-9 col-xs-6" style="float: right;">
-<div class="head-cont clearfix">
+	<div class="head-bar-inner">
+	<div class="row">
 
-<button class="btn-mobile btn-mobile-nav">Menu</button>
-<div id="head-nav" class="head-nav">
-<nav class="nav"><ul class="clearfix"><li id="menu-item-468" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="https://rscard.px-lab.com/startuper/#about">About</a></li>
-<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="https://rscard.px-lab.com/startuper/#portfolio">Portfolio</a></li>
-<li id="menu-item-474" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home current-menu-ancestor current-menu-parent menu-item-has-children"><a href="https://rscard.px-lab.com/startuper/#experience">clients</a></li>
-</ul></nav></div></div>
-</div>
-</div>
-</div>
-</div>
+	<div style="padding-right: 20px;">
+	<div class="head-cont clearfix">
+	
+	<button class="btn-mobile btn-mobile-nav">Menu</button>
+	<div id="head-nav" class="head-nav">
+	<nav class="nav"><ul class="clearfix">
+	<li id="menu-item-468" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#about">About</a></li>
+	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="https://rscard.px-lab.com/startuper/#portfolio">Portfolio</a></li>
+	<li id="menu-item-474" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home current-menu-ancestor current-menu-parent menu-item-has-children"><a href="https://rscard.px-lab.com/startuper/#experience">experience</a><span class="rsicon rsicon-chevron-down"></span>
+	</li>
+	<li id="menu-item-472" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="https://rscard.px-lab.com/startuper/#contact">Contact</a></li>
+	
+	</ul></nav></div>
+	</div>
+	</div>
+	</div>
+	</div>
+	</div>
 </div>
 </header>
 <div class="content"style="background-color: black;">
@@ -236,7 +248,7 @@ var date = {"months":["January","February","March","April","May","June","July","
 	<span class="cont">
 		<ul>
 			<li>Founder at Magsmen (Brand Consulting firm)</li>
-			<li>Geenreaal Partner at Grovest (Venture Capitalist Firm)</li>
+			<li>General Partner at Grovest (Venture Capitalist Firm)</li>
 			<li>Managing Partner at Jaya Cotton Products (A Cotton Manufacturing Unit)</li>
 			<li>Director Consultant at BNI Guntur</li>
 		</ul>
@@ -261,6 +273,7 @@ var date = {"months":["January","February","March","April","May","June","July","
 <li><a href="https://www.linkedin.com/in/sandeepnamburu" target="_blank"><i class="rsicon rsicon-linkedin"></i></a></li>
 <li><a href="https://www.instagram.com/magsmenindia/" target="_blank"><i class="rsicon rsicon-instagram"></i></a></li>
 <li><a href="https://www.youtube.com/channel/UCG3agq3IYZmQifQeM2xFNbQ" target="_blank"><i class="rsicon rsicon-youtube"></i></a></li>
+<li><a href="https://www.google.com/maps/place/MAGSMEN/@16.2599672,80.4342088,17z/data=!4m5!3m4!1s0x3a4a755aed1edb2d:0xf0fcdfb624d11870!8m2!3d16.2965175!4d80.4525085" target="_blank"><i class="rsicon rsicon-map-marker"></i></a></li>
 </ul></div>
 </div>
 <div class="section-txt-btn">
@@ -420,7 +433,7 @@ All of our creative work is supported with clear, rational and logical execution
 <img src="../images/client-logos/integrity_global_services.png" alt=""  class="client-img">
 <h4>IGS</h4>
 </div>
-<p>Branding partner for the 6 months. Takes care of complete branding and marketing division of that business.</p>
+<p>Branding partner for the 6 months. Takes care of complete branding and marketing division of the business.</p>
 </div>
 </div>
 <div class="timeline-box timeline-box-left">
@@ -518,50 +531,58 @@ All of our creative work is supported with clear, rational and logical execution
 </div>
 </div>
 </section>
-<!-- <section id="clients" class="section section-clients"><div class="animate-up">
-<h2 class="section-title">My Clients</h2>
-<div class="section-box-transparent">
-<div class="clients-carousel">
-<div class="client-logo">
-<a href="https://market.envato.com/" target="_blank">
-<img src="images/11-logo-envato-1-2-2-1-1.png" alt=""></a>
-</div>
-<div class="client-logo">
-<a href="https://angularjs.org/" target="_blank">
-<img src="images/11-logo-angularjs-1-2-2-1-1.png" alt=""></a>
-</div>
-<div class="client-logo">
-<a href="https://www.omniref.com/ruby/gems/teaspoon/0.7.9" target="_blank">
-<img src="images/11-logo-teaspoon-1-2-2-1-1.png" alt=""></a>
-</div>
-<div class="client-logo">
-<a href="https://wordpress.com/" target="_blank">
-<img src="images/11-logo-wordpress-1-2-2-1-1.png" alt=""></a>
-</div>
-<div class="client-logo">
-<a href="https://evernote.com/?var=1" target="_blank">
-<img src="images/11-logo-evernote-1-2-2-1-1.png" alt=""></a>
-</div>
-<div class="client-logo">
-<a href="https://compass-style.org/" target="_blank">
-<img src="images/11-logo-compass-1-2-2-1-1.png" alt=""></a>
-</div>
-<div class="client-logo">
-<a href="https://getbootstrap.com/" target="_blank">
-<img src="images/11-logo-bootstrap-1-2-2-1-1.png" alt=""></a>
-</div>
-<div class="client-logo">
-<a href="https://jasmine.github.io/" target="_blank">
-<img src="images/11-logo-jasmine-1-2-2-1-1.png" alt=""></a>
-</div>
-<div class="client-logo">
-<a href="https://jquery.com/" target="_blank">
-<img src="images/11-logo-jquery-1-2-2-1-1.png" alt=""></a>
-</div>
-</div>
-</div>
-</div>
-</section> -->
+  <section id="contact" class="section section-contact"><div class="animate-up animated">
+	<h2 class="section-title">Contact Us</h2>
+	<div class="row">
+	<div class="col-sm-6">
+	<div class="section-box" style="min-height: 587px;">
+	<h3>Feel free to contact me</h3>
+	<form class="contactForm" action="#" method="post">
+	<div class="input-field">
+	<input  name="contactName" type="text" id="contactName"><span class="line"></span>
+	<label>Name</label>
+	</div>
+	<div class="input-field">
+	<input class="contact-email" type="email" name="email"><span class="line"></span>
+	<label>Email</label>
+	</div>
+	<div class="input-field">
+	<input class="contact-subject" type="text" name="subject"><span class="line"></span>
+	<label>Subject</label>
+	</div>
+	<div class="input-field">
+	<textarea class="contact-message" rows="4" name="message"></textarea><span class="line"></span>
+	<label>Message</label>
+	</div><div class="g-recaptcha" data-theme="light" data-sitekey="" id="recaptcha1"></div>
+	<span class="btn-outer btn-primary-outer ripple bgGray">
+	<input class="contact-submit btn btn-lg btn-primary" type="submit" value="Send"></span>
+	<div class="contact-response"></div>
+	</form> </div>
+	</div>
+	<div class="col-sm-6">
+	<div class="section-box contact-info has-map" style="min-height: 587px;">
+	<ul class="contact-list"><li class="clearfix">
+	<strong>E-mail </strong>
+	<span><a href="psandeepnamburu@gmail.com">psandeepnamburu@gmail.com</a></span>
+	</li>
+	<li class="clearfix">
+	<strong>Phone</strong>
+	<span>+91-9703356332</span>
+	</li>
+	<li class="clearfix">
+	<strong></strong>
+	<span></span>
+	</li>
+	<li class="clearfix">
+	<strong></strong>
+	<span></span>
+	</li>
+	</div>
+	</div>
+	</div>
+	</div>
+	</div>
+	</section>
 </div>
 </div>
 <footer class="footer" style="background-color: black;"><div class="footer-social">
@@ -570,6 +591,7 @@ All of our creative work is supported with clear, rational and logical execution
 <li><a href="https://www.linkedin.com/in/sandeepnamburu" target="_blank"><i class="rsicon rsicon-linkedin"></i></a></li>
 <li><a href="https://www.instagram.com/magsmenindia/" target="_blank"><i class="rsicon rsicon-instagram"></i></a></li>
 <li><a href="https://www.youtube.com/channel/UCG3agq3IYZmQifQeM2xFNbQ" target="_blank"><i class="rsicon rsicon-youtube"></i></a></li>
+<li><a href="https://www.google.com/maps/place/MAGSMEN/@16.2599672,80.4342088,17z/data=!4m5!3m4!1s0x3a4a755aed1edb2d:0xf0fcdfb624d11870!8m2!3d16.2965175!4d80.4525085" target="_blank"><i class="rsicon rsicon-map-marker"></i></a></li>
 </ul></div>
 </footer>
 </div>
