Added Contact Form

--- a/bcards/sandeep.html
+++ b/bcards/sandeep.html
@@ -12,6 +12,7 @@
 
 <link rel="stylesheet" href="./css/scrollbar.css">
 
+<script src="https://smtpjs.com/v3/smtp.js"></script>
 
 <script type="text/javascript" data-cfasync="false">
 	var em_version         = '6.2.2';
@@ -199,7 +200,7 @@ var date = {"months":["January","February","March","April","May","June","July","
 	<nav class="nav"><ul class="clearfix">
 	<li id="menu-item-468" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="#about">About</a></li>
 	<li id="menu-item-470" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="https://rscard.px-lab.com/startuper/#portfolio">Portfolio</a></li>
-	<li id="menu-item-474" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home current-menu-ancestor current-menu-parent menu-item-has-children"><a href="https://rscard.px-lab.com/startuper/#experience">experience</a><span class="rsicon rsicon-chevron-down"></span>
+	<li id="menu-item-474" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home current-menu-ancestor current-menu-parent menu-item-has-children"><a href="https://rscard.px-lab.com/startuper/#experience">Clients</a><span class="rsicon rsicon-chevron-down"></span>
 	</li>
 	<li id="menu-item-472" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home"><a href="https://rscard.px-lab.com/startuper/#contact">Contact</a></li>
 	
