--- a/bcards/sandeep.html
+++ b/bcards/sandeep.html
@@ -281,7 +281,7 @@ var date = {"months":["January","February","March","April","May","June","July","
 <!-- <p><a class="btn btn-lg btn-border ripple" target="_blank" href="https://bit.ly/1P5CMQ3">
 Download Resume </a></p> -->
 <p style="color: #ffffff;">
-	Magsmen is the finest Brand consulting firm in guntur,designed to formulate the strategies for the existing businesses to compete in this hyper competitive global business market. We are specialised in concept development, Brand creation, Brand strategy, Digital marketing and many more.
+	Magsmen is the finest Brand consulting firm in guntur, designed to formulate the strategies for the existing businesses to compete in this hyper competitive global business market. We are specialised in concept development, Brand creation, Brand strategy, Digital marketing and many more.
 
 We use our creativity to come up with the right concept, idea or that gorgeous design. </p>
 <p style="color: #ffffff;">
@@ -540,7 +540,7 @@ All of our creative work is supported with clear, rational and logical execution
 	<h3>Feel free to contact me</h3>
 	<form class="contactForm" action="#" method="post">
 	<div class="input-field">
-	<input  name="contactName" type="text" id="contactName"><span class="line"></span>
+	<input  name="contactName" type="text" name="name"><span class="line"></span>
 	<label>Name</label>
 	</div>
 	<div class="input-field">
