--- a/email.html
+++ b/email.html
@@ -9,7 +9,9 @@
   <script type="text/javascript"> 
     function sendEmail() { 
       Email.send({ 
-        Secure: '1572e516-42ff-4a02-8108-fac94c459958',
+        Host: "smtp.gmail.com",
+        Username : "prathapkumar.bobby@gmail.com",
+        Password : "159357159357",
         To: 'prathapkumar.lakkakula@gmail.com', 
         From: "prathapkumar.bobby96@gmail.com", 
         Subject: "Sending Email using javascript", 
