--- a/email.html
+++ b/email.html
@@ -8,18 +8,15 @@
   
   <script type="text/javascript"> 
     function sendEmail() { 
-      Email.send({ 
-        Host: "smtp.gmail.com",
-        Username : "prathapkumar.bobby@gmail.com",
-        Password : "159357159357",
-        To: 'prathapkumar.lakkakula@gmail.com', 
-        From: "prathapkumar.bobby96@gmail.com", 
-        Subject: "Sending Email using javascript", 
-        Body: "Well that was easy!!", 
-      }) 
-        .then(function (message) { 
-          alert("mail sent successfully") 
-        }); 
+      Email.send({
+				SecureToken: "15ed1c2f-155b-496e-b71d-24bf18fb5de5",
+				To : "prathapkumar.lakkakula@gmail.com",
+        From : "prathapkumar.bobby@gmail.com",
+        Subject : "Test email",
+				Body : "<html><h2>Header</h2><strong>Bold text</strong><br></br><em>Italic</em></html>"
+			}).then(
+			  message => alert(message)
+			);
     } 
   </script> 
 </head> 
