--- a/bcards/sandeep.html
+++ b/bcards/sandeep.html
@@ -539,10 +539,14 @@ All of our creative work is supported with clear, rational and logical execution
 	<div class="section-box" style="min-height: 587px;">
 	<h3>Feel free to contact me</h3>
 	<form class="contactForm" action="#" method="post">
-	<div class="input-field">
-	<input  name="contactName" type="text" name="name"><span class="line"></span>
-	<label>Name</label>
-	</div>
+		<div class="input-field">
+			<input
+			  class="contact-name"
+			  type="text"
+			  name="name"
+			/><span class="line"></span>
+			<label>Name</label>
+		  </div>
 	<div class="input-field">
 	<input class="contact-email" type="email" name="email"><span class="line"></span>
 	<label>Email</label>
