commit on 'master'

--- a/index.html
+++ b/index.html
@@ -236,6 +236,9 @@ and (orientation : landscape) {
     top: 50px;
     height: 60px;
 }
+.scroll-color {
+  background-color: transparent !important;
+}
     </style>
 </head>
 
@@ -266,7 +269,7 @@ and (orientation : landscape) {
     ================================================== -->
     <header class="s-header">
 
-        <div class="header-logo header-menu-toggle header-brand-logo">
+        <div class="header-logo header-menu-toggle header-brand-logo scroll-color">
             <a class="site-logo" href="index.html">
                 <img class="site-icon" src="images/magsmen-logo.png" alt="Homepage">
             </a>
